After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770713 - New events are always assumed to have a time/duration
New events are always assumed to have a time/duration
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.21.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-01 16:18 UTC by Bastian Ilsø
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
quick-add-popover: only today events are timed (1.59 KB, patch)
2016-09-28 03:28 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Bastian Ilsø 2016-09-01 16:18:48 UTC
To reproduce, create an event called "beach party" on some friday.

The event receives a timestamp equal to the current time you made the event and a duration of 1 hour.

I dont think making assumptions about time is a a good idea, a few reasons:

 * It seems unlikely to me that an event you create on some date happens to start the exact same time of day in which you create the event.
 * My beach parties are rarely just 1 hour.


The consequence of the current fallback is that I always have to press "Edit Details" to change the time.

I think a more sane fallback is to have no assumption about specific time. All you know from user interaction is that it is going to happen on that day (unless the user dragged over several days). So I would suggest to use "All day" by default[1]. Some users like me rarely cares about specific time for events and users who really care about having specific times on events would most likely have to edit the timestamp anyway.


[1] This is also what google calendar does.
Comment 1 Georges Basile Stavracas Neto 2016-09-28 03:28:58 UTC
Created attachment 336411 [details] [review]
quick-add-popover: only today events are timed

Everything else is all day.
Comment 2 Georges Basile Stavracas Neto 2016-09-28 03:29:24 UTC
Thanks for the report!

Attachment 336411 [details] pushed as 1e14528 - quick-add-popover: only today events are timed