quick-add-popover: only today events are timed

Everything else is all day.

https://bugzilla.gnome.org/show_bug.cgi?id=770713